--- a/styles/main.css
+++ b/styles/main.css
@@ -1,45 +1,45 @@
-body{
-	font-family: "RalewayRegular", sans-serif;
+body {
+	font-family: 'RalewayRegular', sans-serif;
 	font-size: 16px;
 	min-width: 320px;
+	background-color: #181818;
 }
 
 nav {
-	position:fixed;
-	top:0;
-	left:0;
-	width:100%;
-	z-index:99;
-	height:94px;
-	line-height:94px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 99;
+	height: 94px;
+	line-height: 94px;
 }
 
 .menu {
-	padding:0px;
-	margin:0;
-	list-style-type:none;
+	padding: 0px;
+	margin: 0;
+	list-style-type: none;
 }
 
 .menu li {
 	display: inline-block;
 	padding: 0px 30px;
-
 }
 
 .menu li a {
-	color:#ffffff;
-	text-transform:uppercase;
-	font-family:'RalewayBold', sans-serif;
+	color: #ffffff;
+	text-transform: uppercase;
+	font-family: 'RalewayBold', sans-serif;
 }
 
 .menu li a:hover,
-.menu li a:focus{
-	color:#cbcfd5;
-	text-transform:uppercase;
-	text-decoration:none;
+.menu li a:focus {
+	color: #cbcfd5;
+	text-transform: uppercase;
+	text-decoration: none;
 }
 #home {
-	cursor:pointer;
+	cursor: pointer;
 }
 
 .title_block {
@@ -50,37 +50,36 @@ nav {
 }
 
 .title_block h1 {
-	font-size:30px;
-	font-family:'RalewayBold',sans-serif;
+	font-size: 30px;
+	font-family: 'RalewayBold', sans-serif;
 	text-align: center;
 	color: #ffffff;
-	text-transform:uppercase;
-	letter-spacing:30px;
+	text-transform: uppercase;
+	letter-spacing: 30px;
 }
 
 .title_block p {
-	font-size:20px;
+	font-size: 20px;
 	text-align: center;
-	color:#f2f2f2;
-	letter-spacing:5px;
+	color: #f2f2f2;
+	letter-spacing: 5px;
 }
 
 #view {
-	color:#fff;
+	color: #fff;
 }
 
-#view:hover{
-	color:#c1c1c1;
+#view:hover {
+	color: #c1c1c1;
 }
 
 .classScroll {
-	background-color:#161616;
-    animation-name: changeNav;
-	opacity:0.8;
-    animation-duration: 2s;
+	/* background-color: #161616; */
+	animation-name: changeNav;
+	opacity: 0.8;
+	animation-duration: 2s;
 }
 .first_block {
-
 	width: 100%;
 	z-index: 1;
 	position: fixed;
@@ -91,19 +90,34 @@ nav {
 	background-size: cover;
 }
 
-header:after{
-	content:'';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #b33c00;
-	opacity:0.1;
+header:after {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: #b33c00;
+	opacity: 0.1;
 }
 
+@media (prefers-color-scheme: dark) {
+	.second_block {
+		background-color: #181818;
+		color: #eee;
+	}
+}
 
+@media (prefers-color-scheme: light) {
+	.second_block {
+		background-color: #f1f1f1;
+		color: #000;
+	}
+}
 .second_block {
 	width: 100%;
-	background-color: #ffffff;
+	/* dark mode or not?? */
+
+	/* dark mode>> */
+
 	overflow: hidden;
 	position: relative;
 	z-index: 10;
@@ -112,123 +126,120 @@ header:after{
 }
 
 #aboutMe {
-	padding-left:40px;
-	padding-right:40px;
-	padding-top:160px;
+	padding-left: 40px;
+	padding-right: 40px;
+	padding-top: 160px;
 }
 
 .abiutTitle {
-	font-size:25px;
-	margin-top:-30px;
-	margin-bottom:30px;
+	font-size: 25px;
+	margin-top: -30px;
+	margin-bottom: 30px;
 	text-transform: uppercase;
 }
 
 .colText {
-	text-align:justify;
-	color:#948c88;
+	text-align: justify;
 }
 
 .btn-outline {
 	color: #8ba4b8;
-    font-size: 12px;
+	font-size: 12px;
 	text-transform: uppercase;
-    border: solid 2px #8ba4b8;
-    background: #ffffff;
-    transition: all 0.3s ease-in-out;
+	border: solid 2px #8ba4b8;
+	background: #ffffff;
+	transition: all 0.3s ease-in-out;
 }
 
-.btn-outline:hover{
+.btn-outline:hover {
 	color: #ffffff;
-    border: solid 2px #8ba4b8;
-    background: #8ba4b8;
-    transition: all 0.3s ease-in-out;
+	border: solid 2px #8ba4b8;
+	background: #8ba4b8;
+	transition: all 0.3s ease-in-out;
 }
 .abiutSkills {
-	margin-top:20px;
-	margin-bottom:20px;
-	text-align:center;
-	font-size:25px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	text-align: center;
+	font-size: 25px;
 	text-transform: uppercase;
 }
-.skills{
-	margin-left:-25px;
-	text-align:center;
+.skills {
+	margin-left: -25px;
+	text-align: center;
 }
-.skills_block{
+.skills_block {
 	margin-bottom: 50px;
 }
-.skills_block h3{
+.skills_block h3 {
 	text-transform: uppercase;
-	font-family: "RalewayRegular", sans-serif;
+	font-family: 'RalewayRegular', sans-serif;
 	font-size: 12px;
 }
 
-.footer_block{
+.footer_block {
 	padding: 10px 0;
 	background-color: #313436;
 }
-.footer_item{
+.footer_item {
 	text-align: center;
 	margin-bottom: 20px;
 }
-.footer_item h5{
-	font-family: "RalewayBold", sans-serif;
+.footer_item h5 {
+	font-family: 'RalewayBold', sans-serif;
 	color: #fff;
 	text-transform: uppercase;
 }
-.footer_item p{
+.footer_item p {
 	font-size: 14px;
 	color: #9d9fb2;
 }
 
-.footer_item div{
+.footer_item div {
 	font-size: 14px;
-	margin-top:30px;
+	margin-top: 30px;
 	color: #9d9fb2;
 }
 
-
-
-.copyright_block{
+.copyright_block {
 	background-color: #1c1e1f;
 	text-align: center;
 	padding: 14px 0;
 }
-.copy_txt{
-	color:#0 ;
+.copy_txt {
+	color: #0;
 }
 
-.soc_btn_white{
-	font-size:25px;
-	margin-top:20px;
+.soc_btn_white {
+	font-size: 25px;
+	margin-top: 20px;
 	border: 1px solid #fff;
-	border-radius:5px;
+	border-radius: 5px;
 	color: #fff;
 	background-color: transparent;
 	width: 40px;
 	height: 40px;
 }
-.soc_btn_white:hover{
+.soc_btn_white:hover {
 	color: #313436;
 	background: #ffffff;
 	transition: all 0.3s ease-in-out;
 }
-.portfolioTitle{
-	margin-top:120px;
-	margin-bottom:20px;
-	text-align:center;
-	font-size:25px;
+.portfolioTitle {
+	margin-top: 120px;
+	margin-bottom: 20px;
+	text-align: center;
+	font-size: 25px;
 	text-transform: uppercase;
 }
 .p2 {
-	padding:2px;
+	padding: 2px;
 }
 
 .portfolio_work_block {
-	position:relative;
-  /* width: 400px; */
-  height: 300px;
+	position: relative;
+	/* width: 400px; */
+	height: 300px;
 }
 
 .image_wrap {
@@ -237,7 +248,7 @@ header:after{
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(109,128,144,.7);
+	background-color: rgba(109, 128, 144, 0.7);
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
@@ -246,33 +257,85 @@ header:after{
 	opacity: 0;
 }
 
-.portfolio_work_block:hover .image_wrap{
+.portfolio_work_block:hover .image_wrap {
 	opacity: 1;
 }
-.portfolio_work_dec{
+.portfolio_work_dec {
 	color: #fff;
 	text-align: center;
 	margin: auto;
 }
 
 .portfolio_work_dec p {
-	font-size:12px;
+	font-size: 12px;
 }
 
+/* scrollBar */
+::-webkit-scrollbar {
+	width: 0;
+}
+#scrollPath {
+	position: fixed;
+	top: 0;
+	right: 0;
+	width: 10px;
+	height: 100%;
+	background: rgba(255, 255, 255, 0.05);
+	z-index: 100;
+}
+#progressbar {
+	position: fixed;
+	top: 0;
+	right: 0;
+	width: 10px;
+	height: 100%;
+	background: linear-gradient(to top, #008aff, #00ffe7);
+	animation: animate 5s linear infinite;
+	z-index: 100;
+}
+@keyframes animate {
+	0%,
+	100% {
+		filter: hue-rotate(0deg);
+	}
+	50% {
+		filter: hue-rotate(360deg);
+	}
+}
+#progressbar:before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(to top, #008aff, #00ffe7);
+	filter: blur(10px);
+}
 
-@media only screen and (max-width : 768px) {
+#progressbar:after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(to top, #008aff, #00ffe7);
+	filter: blur(30px);
+}
+
+@media only screen and (max-width: 768px) {
 	nav {
-		position:fixed;
+		position: fixed;
 		height: 50px;
 		line-height: 50px;
-		background-color:#161616;
-
+		background-color: #161616;
 	}
 	.menu_btn {
-		height:50px;
-		width:40px;
-		color:#ffffff;
-		margin-top:-8px;
+		height: 50px;
+		width: 40px;
+		color: #ffffff;
+		margin-top: -8px;
 		font-size: 25px;
 	}
 
@@ -280,46 +343,45 @@ header:after{
 		padding: 0 20px;
 	}
 	.menu li {
-		display:block;
-		background-color:#393939;
+		display: block;
+		background-color: #393939;
 		font-size: 14px;
-		border-style:  solid;
+		border-style: solid;
 		border-width: 1px;
 	}
 
 	.menu li:hover {
-		background-color:#404040;
+		background-color: #404040;
 	}
 
-	.menu li  a{
-		color:#afafaf;
-		display:block;
+	.menu li a {
+		color: #afafaf;
+		display: block;
 	}
 
-	.menu li  a:hover{
-		color:#ffffff;
+	.menu li a:hover {
+		color: #ffffff;
 	}
 
 	#aboutMe {
-	padding-top:100px;
-	text-align:justify;
+		padding-top: 100px;
+		text-align: justify;
 	}
 }
 
 /* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px) {
+@media only screen and (max-width: 480px) {
 	nav {
-		position:fixed;
+		position: fixed;
 		height: 50px;
 		line-height: 50px;
-		background-color:#161616;
-
+		background-color: #161616;
 	}
 	.menu_btn {
-		height:50px;
-		width:40px;
-		color:#ffffff;
-		margin-top:-8px;
+		height: 50px;
+		width: 40px;
+		color: #ffffff;
+		margin-top: -8px;
 		font-size: 25px;
 	}
 
@@ -327,47 +389,44 @@ header:after{
 		padding: 0 20px;
 	}
 	.menu li {
-		display:block;
-		background-color:#393939;
+		display: block;
+		background-color: #393939;
 		font-size: 14px;
-		border-style:  solid;
+		border-style: solid;
 		border-width: 1px;
 	}
 
 	.menu li:hover {
-		background-color:#404040;
+		background-color: #404040;
 	}
 
-	.menu li  a{
-		color:#afafaf;
-		display:block;
+	.menu li a {
+		color: #afafaf;
+		display: block;
 	}
 
-	.menu li  a:hover{
-		color:#ffffff;
+	.menu li a:hover {
+		color: #ffffff;
 	}
 
 	#aboutMe {
-	padding-top:100px;
-	text-align:justify;
+		padding-top: 100px;
+		text-align: justify;
 	}
-
-
 }
 /* Custom, iPhone Retina */
-@media only screen and (max-width : 320px) {
+@media only screen and (max-width: 320px) {
 	nav {
-		position:fixed;
+		position: fixed;
 		height: 50px;
 		line-height: 50px;
-		background-color:#161616;
-
+		background-color: #161616;
 	}
 	.menu_btn {
-		height:50px;
-		width:40px;
-		color:#ffffff;
-		margin-top:-8px;
+		height: 50px;
+		width: 40px;
+		color: #ffffff;
+		margin-top: -8px;
 		font-size: 25px;
 	}
 
@@ -375,67 +434,57 @@ header:after{
 		padding: 0 20px;
 	}
 	.menu li {
-		display:block;
-		background-color:#393939;
+		display: block;
+		background-color: #393939;
 		font-size: 14px;
-		border-style:  solid;
+		border-style: solid;
 		border-width: 1px;
 	}
 
 	.menu li:hover {
-		background-color:#404040;
+		background-color: #404040;
 	}
 
-	.menu li  a{
-		color:#afafaf;
-		display:block;
+	.menu li a {
+		color: #afafaf;
+		display: block;
 	}
 
-	.menu li  a:hover{
-		color:#ffffff;
+	.menu li a:hover {
+		color: #ffffff;
 	}
 
 	#aboutMe {
-	padding-top:100px;
-	text-align:justify;
+		padding-top: 100px;
+		text-align: justify;
 	}
-
 }
-.img_prev{
-  height: 100%;
-  width: 100%;
+.img_prev {
+	height: 100%;
+	width: 100%;
 }
-section{
-  margin: 20px;
+section {
+	margin: 20px;
 }
-
-
-
-
 
 /*==========  Mobile First Method  ==========*/
 
 /* Custom, iPhone Retina */
-@media only screen and (min-width : 320px) {
-
+@media only screen and (min-width: 320px) {
 }
 
 /* Extra Small Devices, Phones */
-@media only screen and (min-width : 480px) {
-
+@media only screen and (min-width: 480px) {
 }
 
 /* Small Devices, Tablets */
-@media only screen and (min-width : 768px) {
-
+@media only screen and (min-width: 768px) {
 }
 
 /* Medium Devices, Desktops */
-@media only screen and (min-width : 992px) {
-
+@media only screen and (min-width: 992px) {
 }
 
 /* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px) {
-
+@media only screen and (min-width: 1200px) {
 }
