--- a/styles/main bachup).css
+++ b/styles/main bachup).css
@@ -594,7 +594,6 @@ body {
 	font-size: 0.9rem;
 	margin-bottom: var(--spacing-s);
 	text-transform: uppercase;
-	color: white
 }
 
 .card__heading {
@@ -605,7 +604,7 @@ body {
 	word-spacing: 100vw;
 }
 
-/* @media (prefers-color-scheme: light) { */
+@media (prefers-color-scheme: light) {
 	.second_block {
 		background-color: #181818;
 		color: #eee;
@@ -617,12 +616,12 @@ body {
 		animation: animate 5s linear infinite; */
 
 		border: solid 5px;
-		/* border-color: linear-gradient(to top, #db294f, #0aac9b); */
+		border-color: linear-gradient(to top, #db294f, #0aac9b);
 		border-radius: 30px;
 		transition: outline 0.6s linear;
 		margin: 0.5em;
 	}
-/* } */
+}
 /* 
 @media (prefers-color-scheme: light) {
 	.second_block {
